# AiML-walmart-sales-prediction-ml

./: Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: data_cleaning.ipynb  data_preprocessing.ipynb  eda.ipynb  feature_engineering.ipynb  modelling.ipynb  walmart-prediction-rfr.ipynb
scripts/: data_cleaner.py  data_loader.py
