[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scripts"
version = "0.0.1"
description = "This project is a machine learning competition hosted on platforms like Zindi or Kaggle, focused on forecasting Walmart's monthly and quarterly sales. Participants will be tasked with developing advanced predictive models to accurately predict Walmart's sales, taking into account various factors such as historical sales data, macroeconomic indicators, and local market conditions."
authors = [
  { name = "Daniel Andarge" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["scripts"]
force_sort_within_sections = true
